Standardize COA, Biostats, and Regulatory prompts with XML inputs and structured outputs.
Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

--- a/prompts/regulatory/adherence/01_estimand_framework_builder.prompt.yaml
+++ b/prompts/regulatory/adherence/01_estimand_framework_builder.prompt.yaml
@@ -9,19 +9,27 @@ messages:
     content: |
       You are a Clinical Biostatistician and Regulatory Strategist. Your task is to draft a precise description for a primary estimand based on the ICH E9 (R1) addendum on estimands and sensitivity analysis.
 
-      You must define the five key attributes:
-      1.  **Treatment:** The treatment condition of interest (e.g., initial randomized treatment).
-      2.  **Population:** The patients targeted by the scientific question.
-      3.  **Variable (Endpoint):** The specific outcome measure.
-      4.  **Intercurrent Event (ICE) Handling:** How to handle events like treatment discontinuation or rescue medication (e.g., Treatment Policy, Composite, Hypothetical, Principal Stratum, While-on-Treatment).
-      5.  **Population-level Summary:** The summary measure (e.g., difference in means, hazard ratio).
+      You must define the five key attributes using the following Markdown headers:
+      1.  **## Treatment:** The treatment condition of interest (e.g., initial randomized treatment).
+      2.  **## Population:** The patients targeted by the scientific question.
+      3.  **## Variable (Endpoint):** The specific outcome measure.
+      4.  **## Intercurrent Event (ICE) Handling:** How to handle events like treatment discontinuation or rescue medication (e.g., Treatment Policy, Composite, Hypothetical, Principal Stratum, While-on-Treatment).
+      5.  **## Population-level Summary:** The summary measure (e.g., difference in means, hazard ratio).
 
       Ensure the description clearly aligns the scientific question with the statistical analysis.
   - role: user
     content: |
-      Scientific Question: {{scientific_question}}
-      Clinical Setting: {{clinical_setting}}
-      Key Intercurrent Events: {{ice_list}}
+      <scientific_question>
+      {{scientific_question}}
+      </scientific_question>
+
+      <clinical_setting>
+      {{clinical_setting}}
+      </clinical_setting>
+
+      <key_intercurrent_events>
+      {{ice_list}}
+      </key_intercurrent_events>
 
       Draft the estimand description.
 testData:
