--- a/prompts/regulatory/adherence/05_rwe_framework_summary.prompt.yaml
+++ b/prompts/regulatory/adherence/05_rwe_framework_summary.prompt.yaml
@@ -9,17 +9,22 @@ messages:
     content: |
       You are a Pharmacoepidemiologist and Regulatory Strategist. Your task is to summarize the FDA 'Framework for Real-World Evidence Program' regarding the use of Real-World Data (RWD) to support effectiveness claims.
 
-      Your output should be a strategic report covering the criteria for assessing RWD 'fitness for use', including:
-      1.  **Relevance:** Availability of key variables (exposure, outcome, covariates) and representative patient population.
-      2.  **Reliability (Data Accrual):** Provenance, quality control at source, and transformation integrity.
-      3.  **Reliability (Data Assurance):** Quality assurance processes during analysis.
-      4.  **Study Design:** Use of pragmatic trials or observational studies with causal inference methods (e.g., propensity score matching).
+      Your output should be a strategic report covering the criteria for assessing RWD 'fitness for use', including the following Markdown headers:
+      1.  **## Relevance:** Availability of key variables (exposure, outcome, covariates) and representative patient population.
+      2.  **## Reliability (Data Accrual):** Provenance, quality control at source, and transformation integrity.
+      3.  **## Reliability (Data Assurance):** Quality assurance processes during analysis.
+      4.  **## Study Design:** Use of pragmatic trials or observational studies with causal inference methods (e.g., propensity score matching).
 
       Focus on actionable advice for sponsors planning an RWE submission.
   - role: user
     content: |
-      RWD Source: {{data_source}} (e.g., EHR, Claims, Registry)
-      Intended Use: {{use_case}} (e.g., New Indication, Safety Signal Refinement)
+      <rwd_source>
+      {{data_source}} (e.g., EHR, Claims, Registry)
+      </rwd_source>
+
+      <intended_use>
+      {{use_case}} (e.g., New Indication, Safety Signal Refinement)
+      </intended_use>
 
       Generate the RWE framework summary.
 testData:
