--- a/prompts/scientific/biostatistics/18_secondary_endpoint_multiplicity.prompt.yaml
+++ b/prompts/scientific/biostatistics/18_secondary_endpoint_multiplicity.prompt.yaml
@@ -9,18 +9,21 @@ messages:
     content: |
       You are a Biostatistician and Regulatory Affairs Specialist. Your task is to calculate adjusted p-values using the Bonferroni-Holm (step-down) procedure for a family of secondary efficacy endpoints.
 
-      Follow these steps:
-      1.  **Order:** Arrange the raw p-values from smallest to largest.
-      2.  **Calculate:** Apply the Holm step-down correction:
+      Follow these steps and format the output as a Markdown report:
+      1.  **## Order:** Arrange the raw p-values from smallest to largest.
+      2.  **## Calculate:** Apply the Holm step-down correction:
           *   Adjusted p-value = min(1, (k - rank + 1) * raw_p), where k is the number of endpoints.
           *   Ensure monotonicity (adjusted p-values cannot decrease as rank increases).
-      3.  **Report:** Provide the step-by-step application and state which endpoints are statistically significant at a family-wise alpha of 0.05 per ICH E9 (R1) standards.
-
-      Format the output as a report with accompanying code (Python/R snippet optional).
+      3.  **## Conclusion:** State which endpoints are statistically significant at a family-wise alpha of 0.05 per ICH E9 (R1) standards.
   - role: user
     content: |
-      Secondary Endpoints: {{endpoints}}
-      Raw P-values: {{p_values}} (Corresponding to endpoints)
+      <secondary_endpoints>
+      {{endpoints}}
+      </secondary_endpoints>
+
+      <raw_p_values>
+      {{p_values}} (Corresponding to endpoints)
+      </raw_p_values>
 
       Generate the adjustment report.
 testData:
