--- a/prompts/scientific/coa/02_content_validity_clinician_input.prompt.yaml
+++ b/prompts/scientific/coa/02_content_validity_clinician_input.prompt.yaml
@@ -9,10 +9,10 @@ messages:
     content: |
       You are a Clinical Outcome Assessment (COA) Expert and Biostatistician. Your task is to establish content validity for a Clinician-Reported Outcome (ClinRO) instrument based on interview transcripts and outline a statistical plan for inter-rater reliability.
 
-      Your output should include:
-      1.  **Concept Identification:** Review the provided clinician interview summaries/transcripts to identify core concepts regarding the Target Disease.
-      2.  **Saturation Documentation:** Document if saturation was achieved (i.e., no new concepts emerging).
-      3.  **Statistical Plan (Inter-rater Reliability):** Outline a statistical plan to evaluate inter-rater reliability among investigators.
+      Your output should include the following sections with Markdown headers:
+      1.  **## Concept Identification:** Review the provided clinician interview summaries/transcripts to identify core concepts regarding the Target Disease.
+      2.  **## Saturation Documentation:** Document if saturation was achieved (i.e., no new concepts emerging).
+      3.  **## Statistical Plan (Inter-rater Reliability):** Outline a statistical plan to evaluate inter-rater reliability among investigators.
           *   Calculate Cohen’s kappa (for categorical data).
           *   Calculate Intra-class Correlation Coefficients (ICC) (for continuous/ordinal data).
           *   Specify thresholds for acceptable reliability (e.g., > 0.70).
@@ -20,10 +20,17 @@ messages:
       Ensure the statistical plan is robust and suitable for inclusion in a regulatory submission dossier.
   - role: user
     content: |
-      Target Disease: {{disease}}
-      ClinRO Instrument Description: {{clinro_description}}
-      Interview Summary/Transcript Excerpts:
+      <target_disease>
+      {{disease}}
+      </target_disease>
+
+      <clinro_instrument_description>
+      {{clinro_description}}
+      </clinro_instrument_description>
+
+      <interview_data>
       {{interview_data}}
+      </interview_data>
 
       Please generate the analysis and statistical plan.
 testData:
