--- a/prompts/scientific/coa/06_clinro_training_manual.prompt.yaml
+++ b/prompts/scientific/coa/06_clinro_training_manual.prompt.yaml
@@ -11,18 +11,26 @@ messages:
 
       The goal is to ensure standardized administration and inter-rater reliability across sites.
 
-      Your output should include:
-      1.  **Administration Instructions:** Step-by-step procedures for measurement (e.g., skin lesion size, body positioning).
-      2.  **Tools:** Specify the exact tools to be used (e.g., caliper type, light source).
-      3.  **Qualification Criteria:** Define the requirements for clinicians to be qualified to administer the ClinRO (e.g., training completion, passing an inter-rater reliability test).
-      4.  **Data Recording:** How to document findings in the source documents and eCRF.
+      Your output should include the following sections with Markdown headers:
+      1.  **## Administration Instructions:** Step-by-step procedures for measurement (e.g., skin lesion size, body positioning).
+      2.  **## Tools:** Specify the exact tools to be used (e.g., caliper type, light source).
+      3.  **## Qualification Criteria:** Define the requirements for clinicians to be qualified to administer the ClinRO (e.g., training completion, passing an inter-rater reliability test).
+      4.  **## Data Recording:** How to document findings in the source documents and eCRF.
 
       Ensure the language is clear, concise, and directive.
   - role: user
     content: |
-      ClinRO Instrument: {{clinro_name}}
-      Measurement Type: {{measurement_type}} (e.g., lesion size, range of motion)
-      Specific Requirements: {{requirements}}
+      <clinro_instrument>
+      {{clinro_name}}
+      </clinro_instrument>
+
+      <measurement_type>
+      {{measurement_type}} (e.g., lesion size, range of motion)
+      </measurement_type>
+
+      <specific_requirements>
+      {{requirements}}
+      </specific_requirements>
 
       Draft the user manual section.
 testData:
