--- a/prompts/scientific/biostatistics/16_dunnett_adjustment_calculator.prompt.yaml
+++ b/prompts/scientific/biostatistics/16_dunnett_adjustment_calculator.prompt.yaml
@@ -14,14 +14,26 @@ messages:
       2.  Use `glht()` with `mcp(dose = "Dunnett")` to specify the comparisons.
       3.  Output the adjusted p-values and 97.5% simultaneous confidence intervals (assuming a one-sided test or adjusting alpha appropriately).
       4.  Include comments explaining the steps.
+      5.  Be wrapped in an R code block (```r).
 
       Ensure the code handles the `dose` variable as a factor.
   - role: user
     content: |
-      Response Variable: {{response_var}}
-      Dose/Treatment Variable: {{dose_var}}
-      Data Frame Name: {{dataframe}}
-      Control Group Label: {{control_label}} (if needing re-leveling)
+      <response_variable>
+      {{response_var}}
+      </response_variable>
+
+      <dose_variable>
+      {{dose_var}}
+      </dose_variable>
+
+      <dataframe_name>
+      {{dataframe}}
+      </dataframe_name>
+
+      <control_group_label>
+      {{control_label}} (if needing re-leveling)
+      </control_group_label>
 
       Generate the R code.
 testData:
