--- a/prompts/scientific/coa/01_qualitative_interview_guide.prompt.yaml
+++ b/prompts/scientific/coa/01_qualitative_interview_guide.prompt.yaml
@@ -11,20 +11,28 @@ messages:
 
       Follow these guidelines:
       1.  **Objective:** Understand how patients experience the Target Disease/Symptom.
-      2.  **Structure:**
-          *   **Introduction:** Warm-up and consent confirmation.
-          *   **Concept Elicitation:** Open-ended questions on daily life impact, symptom experience, and functional limitations.
-          *   **Probing Questions:** Specific probes to reach saturation (e.g., frequency, severity, duration).
-          *   **Cognitive Debriefing:** Questions to test understanding of specific PRO items (relevance, clarity, recall period).
-          *   **Closing:** Summary and opportunity for final comments.
+      2.  **Structure:** Use the following Markdown headers:
+          *   ## Introduction: Warm-up and consent confirmation.
+          *   ## Concept Elicitation: Open-ended questions on daily life impact, symptom experience, and functional limitations.
+          *   ## Probing Questions: Specific probes to reach saturation (e.g., frequency, severity, duration).
+          *   ## Cognitive Debriefing: Questions to test understanding of specific PRO items (relevance, clarity, recall period).
+          *   ## Closing: Summary and opportunity for final comments.
       3.  **Standards:** Adhere to FDA Patient-Reported Outcome (PRO) guidance and ISPOR good practice guidelines.
 
       Ensure the tone is empathetic yet professional, suitable for a clinical research setting.
   - role: user
     content: |
-      Target Disease/Symptom: {{disease}}
-      Specific Areas of Interest: {{areas_of_interest}}
-      PRO Instrument (for debriefing): {{pro_instrument}}
+      <target_disease>
+      {{disease}}
+      </target_disease>
+
+      <areas_of_interest>
+      {{areas_of_interest}}
+      </areas_of_interest>
+
+      <pro_instrument>
+      {{pro_instrument}}
+      </pro_instrument>
 
       Please generate the interview guide.
 testData:
