Implement repository improvements and tooling
- Added .gitignore
- Added CONTRIBUTING.md
- Updated README.md with setup instructions
- Added Issue/PR templates
- Added .pre-commit-config.yaml
- Added tools/scripts/search_prompts.py
- Added tools/scripts/update_last_modified.py
- Updated validate_prompt_schema.py to detect duplicate names and support last_modified
- Added docs/USAGE.md
- Initialized CHANGELOG.md
- Renamed duplicate prompt 'E2E Test Discovery Template' to 'E2E Test Discovery Lifecycle Template'

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

--- a/prompts/technical/software_engineering/lifecycle/08_e2e_test_discovery.prompt.yaml
+++ b/prompts/technical/software_engineering/lifecycle/08_e2e_test_discovery.prompt.yaml
@@ -1,6 +1,6 @@
 # yamllint disable rule:line-length
 ---
-name: E2E Test Discovery Template
+name: E2E Test Discovery Lifecycle Template
 description: Provide a system prompt template that guides an LLM to analyse a codebase and generate a comprehensive end-to-end test plan.
 model: gpt-4
 modelParameters:
